@@ -18,11 +18,6 @@ subprojects {
         }
     }
 
-    configure<JavaPluginExtension> {
-        sourceCompatibility = JavaVersion.VERSION_21
-        targetCompatibility = JavaVersion.VERSION_21
-    }
-
     tasks.withType<JavaCompile> {
         options.encoding = "UTF-8"
         options.compilerArgs.addAll(listOf("-Xlint:all", "-proc:none", "-Werror"))
@@ -40,6 +35,7 @@ subprojects {
         failFast = true
         testLogging.showStandardStreams = true
         testLogging.exceptionFormat = TestExceptionFormat.FULL
+        jvmArgs("-XX:+EnableDynamicAgentLoading")
     }
 
     tasks.register("mkdir") {
